# edge-ai

./: .cursorrules  .envrc.example  .gitignore  Makefile  POST_FLASH_SETUP.md  README.md
.github/workflows/: build-image.yml
backend/iot/terraform/: container-signing.tf  device-monitoring.tf  ecr.tf  fleet-provisioning.tf  iot.tf  logging.tf  main.tf  pre_provisioning_hook.py
docs/: controller-setup.md  github-actions-setup.md
firmware/: TODO.md  all.mk
firmware/apps/: deploy-all-sandbox.sh  deploy.sh  edge-app.sh
firmware/apps/animal-detector/: Dockerfile  config.json  service.service
firmware/apps/animal-detector/app/: main.py
firmware/apps/homeassistant/: Dockerfile  entrypoint.sh  sandbox.json
firmware/apps/homeassistant/config/: automations.yaml  scenes.yaml  (+2 more)
firmware/apps/scripts/: app-deploy.sh  app-logs.sh  app-stop.sh  common.sh  device-check.sh
firmware/apps/squirrel-cam/: Dockerfile  Makefile  config.json  deploy.sh  docker-compose.yml  sandbox.json
firmware/infra/terraform/: bootstrap.sh  ec2.tf  ec2_monitor.py  eventbridge.tf  iam.tf  lambda.tf  lambda_function.py  outputs.tf  s3.tf  sns.tf  terraform.tfvars.example  test-alert-force.sh  test-alert.sh  variables.tf
firmware/yocto/config/: kas.yml  yocto-config.sh
firmware/yocto/meta-edge-secure/: TODO.md
iot/: .gitignore  pyproject.toml  requirements.txt
iot/provision/: pyproject.toml
iot/provision/src/: provision.py
iot/src/: cleanup.py  cli.py  provision.py
iot/terraform/: outputs.tf  ssm.tf  variables.tf
makefiles/: firmware.mk
scripts/: edge-sign
sources/: .gitkeep
(+78 files in other folders)
