[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edge-ai-iot"
version = "0.1.0"
description = "IoT provisioning tools for Edge AI devices"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
]

[project.scripts]
edge-ai-iot = "src.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

